--- a/greater/less/greater-main.less
+++ b/greater/less/greater-main.less
@@ -895,6 +895,11 @@ p {
             }
         }
     }
+    @media (max-width: 1200px) {
+        h2.big {
+            font-size: 90px;
+        }
+    }
     @media(min-width:768px) {
         padding-top: 150px;
         padding-bottom: 150px;
